--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -220,6 +220,8 @@
     <string name="refresh">Refresh</string>
     <string name="action_add_tag">Add tag</string>
     <string name="action_add_tag_tip">Enter new tags, separated with comma</string>
+    <string name="action_clear_image_cache">Clear image cache</string>
+    <string name="action_image_cache_cleared">Image cache cleared</string>
     <string name="open_in_other_app">Open with other app</string>
     <string name="filter_the_uploader">Block the uploader \"%s\"?</string>
     <string name="filter_added">Blocker added</string>
