--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -418,8 +418,8 @@
     <string name="settings_eh_thumb_resolution">缩略图分辨率</string>
     <string name="settings_eh_thumb_resolution_summary">%s，指定分辨率可能使获取缩略图失败</string>
     <string name="settings_eh_thumb_resolution_auto">自动</string>
-    <string name="settings_eh_force_eh_thumb">强制使用 E-Hentai 缩略图/API 服务器</string>
-    <string name="settings_eh_force_eh_thumb_summary">若 ExHentai 加载失败可尝试此项\n注意：此项将使用 E-Hentai 设置加载图像</string>
+    <string name="settings_eh_force_eh_thumb">强制使用 E-Hentai 缩略图服务器</string>
+    <string name="settings_eh_force_eh_thumb_summary">若 ExHentai 加载失败可尝试此项</string>
     <string name="settings_eh_show_jpn_title">显示日文标题</string>
     <string name="settings_eh_show_jpn_title_summary">需同时在 E-Hentai 网站设置中启用 Japanese Title</string>
     <string name="settings_eh_show_gallery_pages">显示画廊页数</string>
