--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -466,6 +466,7 @@
     <string name="settings_read_show_page_interval">顯示頁面間隔</string>
     <string name="settings_read_turn_page_interval">自動翻頁間隔（秒）</string>
     <string name="settings_read_volume_page">使用音量鍵翻頁</string>
+    <string name="settings_read_volume_page_interval">音量鍵翻頁間隔</string>
     <string name="settings_read_reverse_volume">翻轉音量鍵</string>
     <string name="settings_read_reading_fullscreen">全屏</string>
     <string name="settings_read_custom_screen_lightness">自定義屏幕亮度</string>
