--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -490,8 +490,9 @@
     <string name="settings_read_show_progress">Show progress</string>
     <string name="settings_read_show_battery">Show battery</string>
     <string name="settings_read_show_page_interval">Show page interval</string>
-    <string name="settings_read_turn_page_interval">Trun page interval (in seconds)</string>
+    <string name="settings_read_turn_page_interval">Turn page interval (in seconds)</string>
     <string name="settings_read_volume_page">Use volume key to turn pages</string>
+    <string name="settings_read_volume_page_interval">Volume key turn page interval</string>
     <string name="settings_read_reverse_volume">Reverse volume key</string>
     <string name="settings_read_reading_fullscreen">Fullscreen</string>
     <string name="settings_read_custom_screen_lightness">Custom screen lightness</string>
