--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -385,7 +385,7 @@
     <string name="settings_eh_account_name_tourist">游客模式</string>
     <string name="settings_eh_account_refresh_igneous">刷新 igneous</string>
     <string name="settings_eh_account_sign_out">退出登录</string>
-    <string name="settings_eh_account_sign_out_tip">已退出登录，重启应用以便再次登录</string>
+    <string name="settings_eh_account_sign_out_tip">已退出登录，稍后可重新登录</string>
     <string name="settings_eh_account_identity_cookies">身份 Cookie 可用于登录该账号。\n注意数据安全\n\n%s</string>
     <string name="settings_eh_account_igneous_expire">igneous 自动刷新：</string>
     <string name="settings_eh_account_identity_cookies_copy">复制</string>
