--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -385,7 +385,7 @@
     <string name="settings_eh_account_name_tourist">遊客模式</string>
     <string name="settings_eh_account_refresh_igneous">刷新 igneous</string>
     <string name="settings_eh_account_sign_out">退出登錄</string>
-    <string name="settings_eh_account_sign_out_tip">已退出登錄，重啓應用以便再次登錄</string>
+    <string name="settings_eh_account_sign_out_tip">已退出登錄，稍後可重新登錄</string>
     <string name="settings_eh_account_identity_cookies">身份 Cookie 可用於登錄該賬號。\n注意數據安全\n\n%s</string>
     <string name="settings_eh_account_igneous_expire">igneous 自動刷新：</string>
     <string name="settings_eh_account_identity_cookies_copy">複製</string>
