--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -385,7 +385,7 @@
     <string name="settings_eh_account_name_tourist">訪客模式</string>
     <string name="settings_eh_account_refresh_igneous">重新整理 igneous</string>
     <string name="settings_eh_account_sign_out">登出</string>
-    <string name="settings_eh_account_sign_out_tip">已登出，重新啟動程式以再次登入</string>
+    <string name="settings_eh_account_sign_out_tip">已登出，稍後可重新登入</string>
     <string name="settings_eh_account_identity_cookies">身份 Cookie 可用於登入該帳號。\n請注意資料安全\n\n%s</string>
     <string name="settings_eh_account_igneous_expire">igneous 自動重新整理：</string>
     <string name="settings_eh_account_identity_cookies_copy">複製</string>
