--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright 2016 Hippo Seven
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,8 +14,8 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-
 <resources>
+    <!-- App Name -->
     <!-- Login Scene -->
     <string name="app_waring">このアプリの内容はインターネットから取得したものです。その内容の一部は心身に悪影響を与える可能性があります。\n使用を続行することで規約に同意したとみなされます。</string>
     <string name="username">ユーザー名</string>
@@ -165,6 +166,7 @@
     <string name="select_image_first">画像を選択してください</string>
     <string name="keyword_search">キーワードで検索</string>
     <string name="image_search">画像で検索</string>
+    <!-- Category -->
     <!-- Gallery Detail Scene -->
     <string name="download_upgradeable">アップグレードができます</string>
     <string name="download_upgrade_existed">ギャラリーはすでに存在します。削除をして再度やり直してください。</string>
@@ -456,6 +458,7 @@
     <string name="settings_read_show_page_interval">ページ間隔を表示する</string>
     <string name="settings_read_turn_page_interval">ページ遷移の間隔 (秒単位)</string>
     <string name="settings_read_volume_page">音量ボタンでページをめくる</string>
+    <string name="settings_read_volume_page_interval">音量ボタンでのページ送りの間隔</string>
     <string name="settings_read_reverse_volume">音量ボタンを入れ替える</string>
     <string name="settings_read_reading_fullscreen">全画面</string>
     <string name="settings_read_custom_screen_lightness">画面の明るさをカスタマイズ</string>
