--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -500,6 +500,9 @@
     <string name="settings_privacy_pattern_protection_set">パターン保護が設定されています</string>
     <string name="settings_privacy_secure">スクリーンショットを抑制する</string>
     <string name="settings_privacy_secure_summary">アプリのコンテンツがスクリーンショットで撮影されたり「最近使用したアプリ」のリストに表示されないようにします</string>
+    <string name="settings_privacy_clear_search_history">デバイスの検索履歴を消去</string>
+    <string name="settings_privacy_clear_search_history_summary">このデバイスから検索履歴を消去します</string>
+    <string name="settings_privacy_clear_search_history_cleared">検索履歴を消去しました</string>
     <string name="settings_advanced">その他の設定</string>
     <string name="settings_advanced_save_parse_error_body">解析の失敗時に HTML ファイルを保存</string>
     <string name="settings_advanced_save_parse_error_body_summary">HTML ファイルに個人情報が含まれている場合があります</string>
