--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -27,13 +27,12 @@
     <string name="error_username_cannot_empty">使用者名稱欄位不能為空</string>
     <string name="error_password_cannot_empty">密碼欄位不能為空</string>
     <string name="sign_in_failed">登入失敗</string>
-    <string name="sign_in_failed_tip">若持續出錯，請嘗試“透過網頁登入”或“透過 Cookie 登入”。</string>
+    <string name="sign_in_failed_tip">若持續出錯，請嘗試“透過網頁登入”。</string>
     <string name="get_it">知道了</string>
     <!-- Cookie Sign In Scene -->
     <string name="cookie_explain">Cookie 是儲存在瀏覽器裡的一小塊資料。如果您不清楚 Cookie 是什麼或者如何取得 Cookie，最好去查一下。\n\n請輸入特定的 Cookie 來登入。</string>
     <string name="from_clipboard">從剪貼板匯入</string>
     <string name="text_is_empty">文字是空的</string>
-    <string name="wrong_cookie_warning">看來您輸入的 Cookie 是錯誤的，最好再檢查一下。</string>
     <string name="from_clipboard_error">未在剪貼板中發現 Cookies。</string>
 
     <!-- Select Site Scene -->
@@ -607,6 +606,7 @@
     <string name="no_browser_installed">請安裝一個瀏覽器。</string>
     <string name="cloudflare_bypass_failed">未能繞過 Cloudflare 驗證</string>
     <string name="open_in_webview">在 WebView 中開啟網址以完成驗證？</string>
+    <string name="information_webview_outdated">請更新 WebView 以獲得更佳的相容性</string>
 
     <!-- Readable Time -->
     <string name="from_the_future">來自未來</string>
